--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -61,6 +61,7 @@
                         <dd><a class="" href="#users"><i class="layui-icon">&#xe612;</i> 用户管理</a></dd>
                         <dd><a class="" href="#class_info"><i class="layui-icon">&#xe68e;</i> 班级管理</a></dd>
                         <dd><a class="" href="#items"><i class="layui-icon">&#xe60a;</i> 题目管理</a></dd>
+                        <dd><a class="" href="#tests"><i class="layui-icon">&#xe60a;</i> 试卷管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
