--- a/src/main/webapp/WEB-INF/views/course_sechedule/course_sechedules.html
+++ b/src/main/webapp/WEB-INF/views/course_sechedule/course_sechedules.html
@@ -1,8 +1,8 @@
 <div class="layui-row layui-admin-mt10">
             <span class="layui-breadcrumb">
                 <a href="">首页</a>
-                <a><cite>系统管理</cite></a>
-                <a><cite>用户管理</cite></a>
+                <a><cite>课程管理</cite></a>
+                <a><cite>课表管理</cite></a>
             </span>
 </div>
 <hr>
@@ -11,39 +11,29 @@
         <div class="layui-tab layui-tab-card">
             <div class="layui-tab-content start">
                 <fieldset class="layui-elem-field layui-field-title">
-                    <legend>用户管理</legend>
+                    <legend>课表管理</legend>
                 </fieldset>
                 <div id="user-table-search">
-                    搜索用户：
+                    搜索课表：
                     <div class="layui-inline">
                         <input class="layui-input" id="user-search" autocomplete="off">
                     </div>
-                    <button class="layui-btn"  data-type="reload" id="searUser">搜索</button>
-                    <button class="layui-btn"  data-type="add" id="addUser">新增</button>
+                    <button class="layui-btn"  data-type="reload" id="searCourseSchedule">搜索</button>
+                    <button class="layui-btn"  data-type="add" id="addCourseSchedule">新增</button>
                 </div>
-                <table class="layui-hide" id="user-table" lay-filter="user"></table>
+                <table class="layui-hide" id="course-schedule-table" lay-filter="courseSchedule"></table>
             </div>
         </div>
     </div>
 </div>
-
-
-<script type="text/html" id="enableTpl">
-    <input type="checkbox" name="enable" value="{{d.id}}" lay-skin="switch" lay-text="正常|锁定" lay-filter="enable" {{
-           d.enable== true ? 'checked' : '' }}>
-</script>
-
 <script type="text/html" id="editUserTpl">
     <button class="layui-btn layui-btn-sm layui-btn-sm">
-        <i class="layui-icon">&#xe654;</i>
+        查看详情
     </button>
     <button class="layui-btn layui-btn-sm layui-btn-sm">
         <i class="layui-icon">&#xe642;</i>
     </button>
     <button class="layui-btn layui-btn-sm layui-btn-sm">
         <i class="layui-icon">&#xe640;</i>
-    </button>
-    <button class="layui-btn layui-btn-sm layui-btn-sm">
-        <i class="layui-icon">&#xe602;</i>
     </button>
 </script>
