--- a/src/main/webapp/WEB-INF/views/items/itemsAdd.html
+++ b/src/main/webapp/WEB-INF/views/items/itemsAdd.html
@@ -25,29 +25,30 @@
 <div class="layui-row">
     <div class="layui-col-md6">
         <form class="layui-form layui-form-pane" action="">
-            <div class="layui-form-item">
-                <label class="layui-form-label">题目类型</label>
-                <div class="layui-input-block">
-                    <select name="interest" lay-filter="aihao">
-                        <option value=""></option>
-                        <option value="0">单选题</option>
-                        <option value="1" selected="">多选题</option>
-                        <option value="2">编程题</option>
-                    </select>
+            <div class="layui-form-item ">
+                <div class="layui-inline">
+                    <label class="layui-form-label">题目类型</label>
+                    <div class="layui-input-block">
+                        <select name="interest" lay-filter="itemType">
+                            <option value=""></option>
+                            <option value="1">单选题</option>
+                            <option value="2" >多选题</option>
+                            <option value="3" selected="">编程题</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-inline" style="margin-left: 90px;">
+                    <label class="layui-form-label">适用班级</label>
+                    <div class="layui-input-inline">
+                        <select name="interest" lay-filter="aihao">
+                            <option value=""></option>
+                            <option value="0">基础班</option>
+                            <option value="1" selected="">就业班</option>
+                        </select>
+                    </div>
                 </div>
             </div>
 
-
-            <div class="layui-form-item">
-                <label class="layui-form-label">适用班级</label>
-                <div class="layui-input-block">
-                    <select name="interest" lay-filter="aihao">
-                        <option value=""></option>
-                        <option value="0">基础班</option>
-                        <option value="1" selected="">就业班</option>
-                    </select>
-                </div>
-            </div>
 
             <div class="layui-form-item">
                 <label class="layui-form-label">所属课程模块</label>
@@ -58,7 +59,7 @@
                         <option value="就业班">就业班</option>
                     </select>
                 </div>
-                <div class="layui-input-inline">
+                <div class="layui-input-inline" style="margin-left: 19px;">
                     <select name="quiz2">
                         <option value="">课程模块</option>
                         <option value="杭州">JavaSE基础</option>
@@ -67,7 +68,7 @@
                         <option value="温州">面向对象</option>
                     </select>
                 </div>
-                <div class="layui-input-inline">
+                <div class="layui-input-inline" style="margin-left: 13px;">
                     <select name="quiz3">
                         <option value="">请选择具体的知识点</option>
                         <option value="西湖区">JDK</option>
@@ -76,75 +77,154 @@
                     </select>
                 </div>
             </div>
-
             <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">日期选择</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="date" id="date1" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-inline">
-                    <label class="layui-form-label">行内表单</label>
-                    <div class="layui-input-inline">
-                        <input type="text" name="number" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">密码</label>
-                <div class="layui-input-inline">
-                    <input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">请务必填写用户名</div>
-            </div>
-
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">范围</label>
-                    <div class="layui-input-inline" style="width: 100px;">
-                        <input type="text" name="price_min" placeholder="￥" autocomplete="off" class="layui-input">
-                    </div>
-                    <div class="layui-form-mid">-</div>
-                    <div class="layui-input-inline" style="width: 100px;">
-                        <input type="text" name="price_max" placeholder="￥" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-            </div>
-
-
-
-            <div class="layui-form-item" pane="">
-                <label class="layui-form-label">开关-开</label>
+                <label class="layui-form-label">分值</label>
                 <div class="layui-input-block">
-                    <input type="checkbox" checked="" name="open" lay-skin="switch" lay-filter="switchTest" title="开关">
+                    <input name="itemScore" type="number" class="layui-input">
                 </div>
             </div>
-            <div class="layui-form-item" pane="">
-                <label class="layui-form-label">单选框</label>
-                <div class="layui-input-block">
-                    <input type="radio" name="sex" value="男" title="男" checked="">
-                    <input type="radio" name="sex" value="女" title="女">
-                    <input type="radio" name="sex" value="禁" title="禁用" disabled="">
+
+            <div class="layui-form-item">
+                <div class="layui-inline">
+                    <button type="button" class="layui-btn" id="test5"><i class="layui-icon"></i>上传视频</button>
+                    <button type="button" class="layui-btn layui-btn-danger" id="test7"><i class="layui-icon"></i>上传图片</button>
                 </div>
             </div>
+
             <div class="layui-form-item layui-form-text">
-                <label class="layui-form-label">文本域</label>
+                <label class="layui-form-label">题干</label>
                 <div class="layui-input-block">
-                    <textarea placeholder="请输入内容" class="layui-textarea"></textarea>
+                    <textarea placeholder="请输入题干" class="layui-textarea"></textarea>
                 </div>
             </div>
+
+          <div  id="codeItemAnswerArea">
+              <div class="layui-form-item layui-form-text"  >
+                  <label class="layui-form-label">参考答案</label>
+                  <div class="layui-input-block">
+                      <textarea placeholder="参考答案" class="layui-textarea"></textarea>
+                  </div>
+              </div>
+          </div>
+            <div  id="singleItemAnswerArea" class="layui-hide">
+                <div class="layui-form-item">
+                    <label class="layui-form-label" style="width: 460px;">单选题选项</label>
+                </div>
+                <div class="layui-form-item">
+                    <div >
+                        <label class="layui-form-label">选项A</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                        <label class="layui-form-label">是否答案</label>
+                        <div class="layui-input-inline">
+                            <input type="radio" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div >
+                        <label class="layui-form-label">选项B</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                        <label class="layui-form-label">是否答案</label>
+                        <div class="layui-input-inline">
+                            <input type="radio" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div >
+                        <label class="layui-form-label" >选项C</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                        <label class="layui-form-label">是否答案</label>
+                        <div class="layui-input-inline">
+                            <input type="radio" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div >
+                        <label class="layui-form-label">选项D</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                        <label class="layui-form-label">是否答案</label>
+                        <div class="layui-input-inline">
+                            <input type="radio" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div  id="multiItemAnswerArea" class="layui-hide">
+                <div class="layui-form-item">
+                    <label class="layui-form-label" style="width: 460px;">多选题选项</label>
+                </div>
+                <div class="layui-form-item">
+                    <div >
+                        <label class="layui-form-label">选项A</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                        <label class="layui-form-label">是否答案</label>
+                        <div class="layui-input-inline">
+                            <input type="checkbox" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div >
+                        <label class="layui-form-label">选项B</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                        <label class="layui-form-label">是否答案</label>
+                        <div class="layui-input-inline">
+                            <input type="checkbox" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div >
+                        <label class="layui-form-label">选项C</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                        <label class="layui-form-label">是否答案</label>
+                        <div class="layui-input-inline">
+                            <input type="checkbox" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div >
+                        <label class="layui-form-label">选项D</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                        <label class="layui-form-label">是否答案</label>
+                        <div class="layui-input-inline">
+                            <input type="checkbox" name="number" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="layui-form-item">
-                <button class="layui-btn" lay-submit="" lay-filter="demo2">跳转式提交</button>
+                <button class="layui-btn" lay-submit="" lay-filter="demo2">添加</button>
+                <button class="layui-btn" lay-submit="" lay-filter="demo2">重置</button>
             </div>
         </form>
     </div>
 
-    <div class="layui-col-md4">
+    <div class="layui-col-md6">
         <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">文本域</label>
+            <label class="layui-form-label">相同知识点的题目</label>
             <div class="layui-input-block">
-                <textarea placeholder="请输入内容" class="layui-textarea"></textarea>
+                <textarea placeholder="" class="layui-textarea"></textarea>
             </div>
         </div>
     </div>
