--- a/src/main/webapp/WEB-INF/views/user/userAdd.html
+++ b/src/main/webapp/WEB-INF/views/user/userAdd.html
@@ -26,7 +26,7 @@
 	<div class="layui-form-item" >
 		<label class="layui-form-label">用户名</label>
 		<div class="layui-input-inline">
-			<input type="text" name="password" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+			<input type="text" id="userName" name="userName" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
 		</div>
 		<label class="layui-form-label">密码框</label>
 		<div class="layui-input-inline">
