--- a/src/main/webapp/WEB-INF/views/class_info/stu_info.html
+++ b/src/main/webapp/WEB-INF/views/class_info/stu_info.html
@@ -64,7 +64,7 @@
     </div>
     <div class="layui-col-md2">
         <button class="layui-btn"  data-type="reload" id="searUser">搜索</button>
-        <button class="layui-btn " id="addUser" data-type="add" >新增学员</button>
+        <button class="layui-btn " id="addStu" data-type="add" >新增学员</button>
     </div>
     <div class="layui-col-md2">
         <button type="button" class="layui-btn" id="test1">
@@ -78,10 +78,10 @@
 <script type="text/javascript" src="/static/assets/js/views/class_info/stu_info.js"></script>
 
 <script type="text/html" id="editUserTpl">
-    <button class="layui-btn layui-btn-sm  " onclick="editUser(this);" data-type="add" >
+    <button class="layui-btn layui-btn-sm " lay-event="edit" >
         <i class="layui-icon">&#xe642;</i>
     </button>
-    <button class="layui-btn layui-btn-sm " onclick="deleteUser(this);">
+    <button class="layui-btn layui-btn-sm " lay-event="del">
         <i class="layui-icon">&#xe640;</i>
     </button>
     <button class="layui-btn layui-btn-sm ">
