添加乱码过滤器

--- a/src/main/webapp/WEB-INF/views/user/userAdd.html
+++ b/src/main/webapp/WEB-INF/views/user/userAdd.html
@@ -49,12 +49,13 @@
 
 	<div class="layui-form-item">
 		<div class="layui-input-block">
-			<button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+			<button class="layui-btn" lay-submit lay-filter="addUser">立即提交</button>
 			<button type="reset" class="layui-btn layui-btn-primary">重置</button>
 		</div>
 	</div>
 </form>
 <script type="text/javascript" src="/static/plugins/layui/layui.js"></script>
 <script type="text/javascript" src="/static/assets/js/views/user/userAdd.js"></script>
+<script type="text/javascript" src="/static/assets/js/BMY.js"></script>
 </body>
 </html>
