--- a/src/main/webapp/WEB-INF/views/user/users.html
+++ b/src/main/webapp/WEB-INF/views/user/users.html
@@ -21,7 +21,7 @@
                     <button class="layui-btn"  data-type="reload" id="searUser">搜索</button>
                     <button class="layui-btn " id="addUser" data-type="addT " >新增</button>
                 </div>
-                <table class="layui-hide" id="user-table"  lay-filter="myUserTable"></table>
+                <table class="layui-hide" lay-data="{id: 'userListTable'}" id="user-table"  lay-filter="myUserTable"></table>
             </div>
         </div>
     </div>
