--- a/src/main/webapp/WEB-INF/views/class_info/classAdd.html
+++ b/src/main/webapp/WEB-INF/views/class_info/classAdd.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/static/assets/css/public.css" media="all" />
 </head>
 <body >
-<form class="layui-form " style="margin-top: 20px;margin-right: 10px;">
+<form class="layui-form" action="/rest/class/classAddOrUpdate" method="post" style="margin-top: 20px;margin-right: 10px;">
 
     <div class="layui-form-item" >
         <label class="layui-form-label">班级名称</label>
