完成班级的增删改查

--- a/src/main/webapp/WEB-INF/views/class_info/classAdd.html
+++ b/src/main/webapp/WEB-INF/views/class_info/classAdd.html
@@ -19,6 +19,7 @@
         <label class="layui-form-label">班级名称</label>
         <div class="layui-input-inline">
             <input type="text" id="className" name="className" required lay-verify="required" placeholder="请输入班级名称" autocomplete="off" class="layui-input">
+            <input type="hidden" id="classId" name="id" >
         </div>
         <label class="layui-form-label">班级类型</label>
         <div class="layui-input-inline">
