增删改查，前端实现

--- a/src/main/webapp/WEB-INF/views/class_info/classAdd.html
+++ b/src/main/webapp/WEB-INF/views/class_info/classAdd.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/static/assets/css/public.css" media="all" />
 </head>
 <body >
-<form class="layui-form" action="/rest/class/classAddOrUpdate" method="post" style="margin-top: 20px;margin-right: 10px;">
+<form class="layui-form"  style="margin-top: 20px;margin-right: 10px;">
 
     <div class="layui-form-item" >
         <label class="layui-form-label">班级名称</label>
@@ -44,7 +44,7 @@
 
     <div class="layui-form-item">
         <div class="layui-input-block">
-            <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+            <button class="layui-btn" lay-submit lay-filter="classAddForm">立即提交</button>
             <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
     </div>
