--- a/src/main/webapp/WEB-INF/views/user/userAdd.html
+++ b/src/main/webapp/WEB-INF/views/user/userAdd.html
@@ -41,7 +41,7 @@
 			<select id="userRole" name="role" lay-verify="required">
 				<option value="">请选择角色</option>
 				<option value="1">管理员</option>
-				<option value="2">普通用户</option>
+				<option value="2">助教</option>
 				<option value="3">游客</option>
 			</select>
 		</div>
