--- a/src/main/webapp/WEB-INF/views/class_info/class_info.html
+++ b/src/main/webapp/WEB-INF/views/class_info/class_info.html
@@ -18,8 +18,8 @@
                     <div class="layui-inline">
                         <input class="layui-input" id="user-search" autocomplete="off">
                     </div>
-                    <button class="layui-btn"  data-type="reload" id="searUser">搜索</button>
-                    <button class="layui-btn"  data-type="add" id="addUser">新增</button>
+                    <button class="layui-btn"  data-type="reload" id="searClass">搜索</button>
+                    <button class="layui-btn"  data-type="add" id="addClass">新增</button>
                 </div>
                 <table class="layui-hide" id="class-table" lay-filter="class_info"></table>
             </div>
