--- a/src/main/webapp/WEB-INF/views/class_info/stu_info.html
+++ b/src/main/webapp/WEB-INF/views/class_info/stu_info.html
@@ -72,6 +72,7 @@
         </button>
     </div>
 </div>
+<input type="hidden" name="classId" id="stuClassId">
 <table class="layui-hide" id="stu-table" lay-filter="stu_info"></table>
 <script type="text/javascript" src="/static/plugins/layui/layui.js"></script>
 <script type="text/javascript" src="/static/assets/js/BMY.js"></script>
