--- a/src/main/webapp/WEB-INF/views/class_info/stuAdd.html
+++ b/src/main/webapp/WEB-INF/views/class_info/stuAdd.html
@@ -19,6 +19,8 @@
         <label class="layui-form-label">学员姓名</label>
         <div class="layui-input-inline">
             <input type="text" id="studentName" name="studentName" required lay-verify="required" placeholder="请输入学生姓名" autocomplete="off" class="layui-input">
+            <input type="hidden" id="stuId" name="id" >
+            <input type="hidden" id="classId" name="classId" >
         </div>
         <label class="layui-form-label">学员学号</label>
         <div class="layui-input-inline">
@@ -30,14 +32,14 @@
     <div class="layui-form-item">
         <label class="layui-form-label">性别</label>
         <div class="layui-input-block">
-            <input type="radio" name="sex" class="sex" value="男" title="男" checked>
-            <input type="radio" name="sex" class="sex" value="女" title="女" >
+            <input type="radio" name="sex" class="sex" value="1" title="男" checked>
+            <input type="radio" name="sex" class="sex" value="2" title="女" >
         </div>
     </div>
 
     <div class="layui-form-item">
         <div class="layui-input-block">
-            <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+            <button class="layui-btn" lay-submit lay-filter="stuAddOrUpdate">立即提交</button>
             <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
     </div>
